--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start-dev": "ts-node-dev --respawn src/index.ts",
     "start": "ts-node src/index.ts",
-    "build": "tsc"
+    "build-prod": "tsc",
+    "run-prod" : "node build/index.js"
   },
   "repository": {
     "type": "git",
