--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "Init",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start-dev": "ts-node-dev --respawn src/index.ts",
     "start": "ts-node src/index.ts",
     "build-prod": "tsc",
-    "run-prod" : "node build/index.js"
+    "run-prod": "node build/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,15 @@
   },
   "homepage": "https://github.com/COS301-SE-2021/Custom-Data-Source-Search#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.2",
+    "ts-jest": "^27.0.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   },
