--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Custom-Data-Source-Search",
+  "name": "cdss",
   "version": "1.0.0",
   "description": "Init",
   "main": "index.js",
   "scripts": {
-    "start-dev": "ts-node-dev --respawn src/index.ts",
-    "start": "ts-node src/index.ts",
+    "start-dev": "ts-node-dev --respawn packages/api/src/index.ts",
+    "start": "ts-node packages/api/src/index.ts",
     "build-prod": "tsc",
     "run-prod": "node build/index.js",
     "test": "jest"
