--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "cdss",
   "version": "1.0.0",
   "description": "Init",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start-dev": "ts-node-dev --respawn packages/api/src/index.ts",
-    "start": "ts-node packages/api/src/index.ts",
+    "start-dev": "ts-node-dev --respawn packages/api/src/server.ts",
+    "start": "ts-node packages/api/src/server.ts",
     "build-prod": "tsc",
-    "run-prod": "node build/index.js",
+    "run-prod": "node build/server.js",
     "test": "jest"
   },
   "repository": {
