--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ts-node packages/api/src/index.ts",
     "build-prod": "tsc",
     "run-prod": "node build/index.js",
-    "test": "jest"
+    "test": "jest --coverage && coveralls < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "coveralls": "^3.1.0",
     "express": "^4.17.1"
   }
 }
