--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "babel-jest": "^27.0.2",
+    "dotenv": "^10.0.0",
+    "helmet": "^4.6.0",
     "jest": "^27.0.2",
     "ts-jest": "^27.0.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
