--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "coveralls": "^3.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "vue": "^2.6.13"
   }
 }
