--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "@vue/test-utils": "^2.0.0-rc.6",
     "babel-jest": "^27.0.2",
     "jest": "^27.0.2",
     "ts-jest": "^27.0.1",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "coveralls": "^3.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "vue": "^3.0.11"
   }
 }
