remove vue from package.json

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   },
   "dependencies": {
     "coveralls": "^3.1.0",
-    "express": "^4.17.1",
-    "vue": "^2.6.13"
+    "express": "^4.17.1"
   }
 }
