Testing for Searching Files

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ts-node packages/api/src/server.ts",
     "build-prod": "tsc",
     "run-prod": "node build/server.js",
-    "test": "jest --coverage && coveralls < coverage/lcov.info"
+    "test": "jest --coverage --verbose && coveralls < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
