--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "coveralls": "^3.1.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "node-persist": "^3.1.0",
     "vue": "^3.0.11"
   }
 }
