--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Init",
   "main": "server.js",
   "scripts": {
-    "start-dev": "ts-node-dev --respawn packages/api/src/server.ts",
-    "start": "ts-node packages/api/src/server.ts",
+    "start-dev": "ts-node-dev --respawn packages/api/src/server.ts\n",
+    "start": "ts-node packages/api/src/server.ts\n",
+    "client": "webpack serve --mode=development\n",
+    "serve": "concurrently \"npm run start-dev\" \"npm run client\"",
     "build-prod": "tsc",
     "run-prod": "node build/server.js",
     "test": "jest --coverage --verbose && coveralls < coverage/lcov.info"
@@ -29,20 +31,32 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "@vue/compiler-sfc": "^3.0.11",
     "babel-jest": "^27.0.2",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "dotenv": "^10.0.0",
     "helmet": "^4.6.0",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "^27.0.2",
     "jquery": "^3.6.0",
+    "rimraf": "^2.7.1",
     "ts-jest": "^27.0.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "vue": "^3.0.11",
+    "vue-loader": "^16.2.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "coveralls": "^3.1.0",
     "express": "^4.17.1",
-    "global": "^4.4.0",
-    "vue": "^3.0.11"
+    "global": "^4.4.0"
   }
 }
