--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jobs:
       node_js: 15
       before_script:
         - cd packages/vue
+        - npm install
       script:
         - npm run test:unit
 
