--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ jobs:
         - npm run test
     - language: node_js
       node_js: 15
-      before_script:
+      before_install:
         - cd packages/vue
-        - npm install
+        - npm install -g @vue/cli
       script:
         - npm run test:unit
 
