--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,27 @@ build/
 packages/api/.env
 /packages/api/package-lock.json
 coverage/
+
+.DS_Store
+packages/vue/node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
