--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -15,6 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.48",
     "lodash.uniqueid": "^4.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
