--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ node_js: 15
 jobs:
   include:
     - stage: test
-      before_cache:
+      cache: npm
+      before_script:
         - cd packages/api
       script:
         - npm run test
     - stage: test
-      before_cache:
+      cache: npm
+      before_install:
         - cd packages/client
       script:
         - npm run test:unit
