--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: node_js
 node_js: 15
 
+cache:
+  directories:
+    - /packages/client/node_modules/
+    - /packages/api/node_modules/
+
 jobs:
   include:
     - stage: test
-      cache: npm
       before_script:
         - cd packages/api
       script:
         - npm run test
     - stage: test
-      cache: npm
       before_install:
         - cd packages/client
       script:
