--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       script:
         - npm run test
     - stage: test
-      before_install:
+      before_script:
         - cd packages/client
       script:
         - npm run test:unit
