--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "joi": "^17.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
