--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,9 +39,12 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "coveralls": "^3.1.0",
     "express": "^4.17.1",
-    "global": "^4.4.0"
+    "global": "^4.4.0",
+    "node-fetch": "^2.6.1"
   }
 }
