--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "joi": "^17.4.0",
     "vue": "^3.0.0",
