--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "joi": "^17.4.0",
+    "primevue": "^3.5.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
