updated delete icon to have base icon

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "coveralls": "^3.1.0",
