--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -45,6 +45,7 @@
     "coveralls": "^3.1.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "highlight.js": "^11.0.1",
     "node-fetch": "^2.6.1"
   }
 }
