--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "datasleuth",
+  "repository": "https://github.com/COS301-SE-2021/Custom-Data-Source-Search",
+  "author": {
+    "name": "Team Abstraction",
+    "email": "abstraction.tuks@gmail.com"
+  },
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,7 +15,8 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "build-installer": "vue-cli-service electron:build && electron-builder"
   },
   "main": "background.js",
   "dependencies": {
@@ -41,6 +47,7 @@
     "spectron": "14.0.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-electron-builder": "~2.0.0",
+    "electron-builder": "^22.11.7",
     "vue-jest": "^5.0.0-0"
   }
 }
