--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,11 +12,12 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "electron:build": "vue-cli-service electron:build",
+    "electron:build:win": "vue-cli-service electron:build --win",
+    "electron:build:linux": "vue-cli-service electron:build --linux",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "build-installer": "vue-cli-service electron:build && electron-builder"
+    "build-installer": "vue-cli-service electron:build --win && electron-builder "
   },
   "main": "background.js",
   "dependencies": {
