--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -41,14 +41,15 @@
     "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
     "electron": "^13.1.4",
+    "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.1.0",
     "highlightjs": "^9.16.2",
+    "kill-port": "^1.6.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "spectron": "14.0.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-electron-builder": "~2.0.0",
-    "electron-builder": "^22.11.7",
     "vue-jest": "^5.0.0-0"
   }
 }
