PasswordInputField.vue adapted to use zxcvbn

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,7 +28,8 @@
     "primevue": "^3.5.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-alpha.1"
+    "vuex": "^4.0.0-alpha.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@electron/remote": "^1.2.0",
