--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -46,6 +46,7 @@
     "express": "^4.17.1",
     "global": "^4.4.0",
     "highlight.js": "^11.0.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "sqlite3": "^5.0.2"
   }
 }
