--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-sqlite3": "^7.4.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "coveralls": "^3.1.0",
