--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "aes-js": "^3.1.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "joi": "^17.4.0",
