--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "joi": "^17.4.0",
+    "pbkdf2": "^3.1.2",
     "primeicons": "^4.1.0",
     "primevue": "^3.5.1",
     "vue": "^3.0.0",
