--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.21.1",
     "better-sqlite3": "^7.4.3",
     "cheerio": "^1.0.0-rc.10",
@@ -51,6 +52,7 @@
     "highlight.js": "^11.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.3",
     "sqlite3": "^5.0.2"
   }
 }
