add hmac dependencies

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -46,6 +46,8 @@
     "express": "^4.17.1",
     "global": "^4.4.0",
     "highlight.js": "^11.0.1",
+    "hmac": "^1.0.1",
+    "js-sha512": "^0.8.0",
     "node-fetch": "^2.6.1"
   }
 }
