--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,7 +24,9 @@
     "aes-js": "^3.1.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "hmac": "^1.0.1",
     "joi": "^17.4.0",
+    "js-sha512": "^0.8.0",
     "pbkdf2": "^3.1.2",
     "primeicons": "^4.1.0",
     "primevue": "^3.5.1",
