--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,9 +39,11 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "better-sqlite3": "^7.4.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
