--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -42,6 +42,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/nodemailer": "^6.4.4",
+    "@types/otplib": "^10.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "better-sqlite3": "^7.4.3",
@@ -55,6 +56,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.3",
+    "otplib": "^12.0.1",
     "sqlite3": "^5.0.2"
   }
 }
