--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -44,6 +44,7 @@
     "@types/node-fetch": "^2.5.12",
     "@types/nodemailer": "^6.4.4",
     "@types/otplib": "^10.0.0",
+    "@types/supertest": "^2.0.11",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "better-sqlite3": "^7.4.3",
@@ -58,6 +59,7 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.3",
     "otplib": "^12.0.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6"
   }
 }
