--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "hmac": "^1.0.1",
     "joi": "^17.4.0",
     "js-sha512": "^0.8.0",
+    "lodash": "^4.17.21",
     "otplib": "^12.0.1",
     "pbkdf2": "^3.1.2",
     "primeicons": "^4.1.0",
