--- a/.github/workflows/integrate-vault.yml
+++ b/.github/workflows/integrate-vault.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - with:
+        with:
           node-version: 15
       - name: Install Dependencies
         run: npm ci
