--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -27,5 +27,8 @@
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "thinbus-srp": "^1.8.0"
   }
 }
