--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -19,16 +19,17 @@
     "@types/helmet": "^4.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.1",
+    "@types/pg": "^8.6.1",
     "babel-jest": "^27.0.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jest": "^27.0.6",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.7.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
+    "tssrp6a": "^3.0.0",
     "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "thinbus-srp": "^1.8.0"
   }
 }
