--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -22,6 +22,7 @@
     "@types/pg": "^8.6.1",
     "babel-jest": "^27.0.6",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jest": "^27.0.6",
