--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -44,6 +44,7 @@
     "@types/node-fetch": "^2.5.12",
     "@types/nodemailer": "^6.4.4",
     "@types/otplib": "^10.0.0",
+    "@types/shelljs": "^0.8.9",
     "@types/supertest": "^2.0.11",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
@@ -59,6 +60,7 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.3",
     "otplib": "^12.0.1",
+    "shelljs": "^0.8.4",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.6"
   }
