--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,6 +51,7 @@
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.1.0",
+    "form-data": "^4.0.0",
     "highlightjs": "^9.16.2",
     "kill-port": "^1.6.1",
     "sass": "^1.26.5",
