--- a/packages/vault/package.json
+++ b/packages/vault/package.json
@@ -7,6 +7,10 @@
     "start": "ts-node src/server.ts",
     "test": "jest --coverage --verbose"
   },
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -32,5 +36,6 @@
     "ts-node": "^10.2.1",
     "tssrp6a": "^3.0.0",
     "typescript": "^4.3.5"
-  }
+  },
+
 }
