--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ on:
     branches: [ development ]
 jobs:
   build:
-    working_directory: ~/repo/packages/client
+    working_directory: ~/packages/client
     docker:
       - image: circleci/node:11-browsers
     steps:
