--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ on:
     branches: [ development ]
 jobs:
   build:
-    working_directory: ~/packages/client
+    working_directory: ~/repo
     docker:
       - image: circleci/node:11-browsers
     steps:
@@ -12,15 +12,9 @@ jobs:
       - run:
           name: Update NPM
           command: "sudo npm install -g npm"
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install Dependencies
           command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
       - run:
           name: Run tests
           command: npm run test
