--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/node:11-browsers
+      - image: cimg/node:14.17.5-browsers
     steps:
       - checkout
       - run:
