--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,7 +12,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test": "jest",
+    "test": "jest --verbose --forceExit",
     "electron:build:win": "vue-cli-service electron:build --win",
     "electron:build:linux": "vue-cli-service electron:build --linux",
     "electron:serve": "vue-cli-service electron:serve",
