--- a/.github/workflows/integerate-backend.yml
+++ b/.github/workflows/integerate-backend.yml
@@ -8,13 +8,17 @@ jobs:
   test-development-pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run headless test
+        uses: GabrielBB/xvfb-action@v1
+      - name: Set Up Node
+        uses: actions/setup-node@v1
         with:
-          node-version: 15
+          node-version: 14
       - name: Install Dependencies
         run: npm ci
-        working-directory: packages/api
+        working-directory: packages/client
       - name: Run Tests
         run: npm run test
-        working-directory: packages/api
+        working-directory: packages/client
