--- a/.github/workflows/integerate-backend.yml
+++ b/.github/workflows/integerate-backend.yml
@@ -1,8 +1,6 @@
 name: Backend Continuous Integration
 
-on:
-  pull_request:
-    branches: [ development ]
+on: [workflow_dispatch]
 
 jobs:
   test-development-pr:
