--- a/.github/workflows/integerate-backend.yml
+++ b/.github/workflows/integerate-backend.yml
@@ -1,22 +1,20 @@
 name: Backend Continuous Integration
 
-on: [workflow_dispatch]
+on:
+  pull_request:
+    branches: [ development ]
 
 jobs:
   test-development-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Run headless test
-        uses: GabrielBB/xvfb-action@v1
-      - name: Set Up Node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 15
       - name: Install Dependencies
         run: npm ci
-        working-directory: packages/client
+        working-directory: packages/api
       - name: Run Tests
         run: npm run test
-        working-directory: packages/client
+        working-directory: packages/api
