--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -1,19 +1,22 @@
-name: Integration Testing
+name: Backend Continuous Integration
 
-on:
-  pull_request:
-    branches: [ development ]
+on: [workflow_dispatch]
 
 jobs:
-  build:
-
+  test-development-pr:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
+      - name: Set Up Node
+        uses: actions/setup-node@v1
         with:
-          run: npm test
-          working-directory: ./ #optional
-          options: #optional
+          node-version: 14
+      - name: Install Dependencies
+        run: npm ci
+        working-directory: packages/client
+      - name: Run Tests
+        run: npm run test
+        working-directory: packages/client
