--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -8,8 +8,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Run headless test
-        uses: GabrielBB/xvfb-action@v1
       - name: Set Up Node
         uses: actions/setup-node@v1
         with:
@@ -17,6 +15,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
         working-directory: packages/client
-      - name: Run Tests
-        run: npm run test
-        working-directory: packages/client
+      - name: Run headless test
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: npm test
+          working-directory: packages/client
