--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -2,7 +2,7 @@ name: Integration Testing
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ development ]
 
 jobs:
   test-master-pr:
