--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -57,6 +57,7 @@
     "global": "^4.4.0",
     "highlight.js": "^11.0.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.3",
     "otplib": "^12.0.1",
