--- a/.github/workflows/Backend-perf.yml
+++ b/.github/workflows/Backend-perf.yml
@@ -1,4 +1,4 @@
-name: Vault Unit Tests
+name: Backend Performance Testing
 
 on:
   pull_request:
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 15
+          node-version: 14
       - name: Install Dependencies
         run: npm ci
         working-directory: packages/vault
       - name: Run Tests
-        run: npm run test
+        run: npm run test:Backend-perf
         working-directory: packages/vault
