--- a/.github/workflows/Backend-perf.yml
+++ b/.github/workflows/Backend-perf.yml
@@ -5,16 +5,23 @@ on:
     branches: [ development ]
 
 jobs:
-  vault-test-development-pr:
+  test-master-pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set Up Node
+        uses: actions/setup-node@v1
         with:
           node-version: 14
       - name: Install Dependencies
         run: npm ci
         working-directory: packages/client
-      - name: Run Tests
-        run: npm run test:Backend-perf
-        working-directory: packages/client
+      - name: Run headless test
+        uses: GabrielBB/xvfb-action@v1
+        env:
+          DS_TEST_EDITOR_EMAIL: ${{ secrets.DS_TEST_EDITOR_EMAIL }}
+          DS_TEST_EDITOR_PW: ${{ secrets.DS_TEST_EDITOR_EMAIL }}
+        with:
+          run: npm run test:Backend-perf
+          working-directory: packages/client
