--- a/.github/workflows/backend-testing.yml
+++ b/.github/workflows/backend-testing.yml
@@ -18,3 +18,5 @@ jobs:
       - name: Run Tests
         run: npm run test
         working-directory: packages/api
+        env:
+          LOCAL_BACKEND: false
