--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -52,6 +52,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "babel-eslint": "^10.1.0",
+    "detect-port": "^1.3.0",
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.1.0",
